--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
 <div class="container">
   <h1>{{ title }}</h1>
-  <nav>
-    <a routerLink="/students">Students</a>
-    <a routerLink="/search">Search</a>
+
+  <nav class="navbar navbar-expand navbar-light bg-light mb-3">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/students" routerLinkActive="active">Students</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/search" routerLinkActive="active">Search</a>
+          </li>
+        </ul>
+    </div>
   </nav>
+
   <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
