--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="messageService.messages.length">
-  <h2>Messages</h2>
-  <button type="button" (click)="messageService.clear()">Clear messages</button>
-
-  <div *ngFor="let message of messageService.messages">{{ message }}</div>
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <ngb-toast *ngFor="let message of messageService.messages">{{message}}
+      </ngb-toast>
+  </div>
 </div>
+
